build_errors.txt
   Compiling cpan_mover v0.1.0 (D:\code\cpantool\cpan_mover)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `uuid`
   --> src\core\mover.rs:110:29
    |
110 |                         id: uuid::Uuid::new_v4().to_string(),
    |                             ^^^^ use of unresolved module or unlinked crate `uuid`
    |
    = help: if you wanted to use a crate named `uuid`, use `cargo add uuid` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `uuid`
   --> src\core\mover.rs:145:21
    |
145 |                 id: uuid::Uuid::new_v4().to_string(),
    |                     ^^^^ use of unresolved module or unlinked crate `uuid`
    |
    = help: if you wanted to use a crate named `uuid`, use `cargo add uuid` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `uuid`
   --> src\core\mover.rs:185:25
    |
185 |                     id: uuid::Uuid::new_v4().to_string(),
    |                         ^^^^ use of unresolved module or unlinked crate `uuid`
    |
    = help: if you wanted to use a crate named `uuid`, use `cargo add uuid` to add it to your `Cargo.toml`

error[E0407]: method `show_history_tab` is not a member of trait `eframe::App`
    --> src\main.rs:1005:5
     |
1005 | /     fn show_history_tab(&mut self, ctx: &egui::Context, ui: &mut egui::Ui) {
1006 | |         if self.history_records.is_empty() {
1007 | |             ui.centered_and_justified(|ui| {
1008 | |                 ui.label(i18n::t("鏆傛棤杩佺Щ璁板綍"));
...    |
1041 | |         });
1042 | |     }
     | |_____^ not a member of trait `eframe::App`

error[E0407]: method `start_restore` is not a member of trait `eframe::App`
    --> src\main.rs:1044:5
     |
1044 | /     fn start_restore(&mut self, record: MigrationRecord, ctx: &egui::Context) {
1045 | |         self.is_processing = true;
1046 | |         self.processing_type = ProcessingType::Restoring;
1047 | |         self.is_paused = false;
...    |
1074 | |         });
1075 | |     }
     | |_____^ not a member of trait `eframe::App`

error[E0425]: cannot find value `UNIX_EPOCH` in this scope
    --> src\main.rs:1022:36
     |
1022 |                         let time = UNIX_EPOCH + Duration::from_secs(record.timestamp);
     |                                    ^^^^^^^^^^ not found in this scope
     |
help: consider importing this constant
     |
3    + use std::time::UNIX_EPOCH;
     |

warning: unused import: `std::time::SystemTime`
 --> src\core\history.rs:5:5
  |
5 | use std::time::SystemTime;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `show_history_tab` found for mutable reference `&mut App` in the current scope
   --> src\main.rs:475:22
    |
475 |                 self.show_history_tab(ctx, ui);
    |                      ^^^^^^^^^^^^^^^^ method not found in `&mut App`

error[E0308]: mismatched types
   --> src\main.rs:660:85
    |
660 | ...                   tx.send(AppEvent::MoveTaskComplete(idx, lb)).unwrap();
    |                               --------------------------      ^^ expected `u64`, found `(u64, MigrationRecord)`
    |                               |
    |                               arguments to this enum variant are incorrect
    |
    = note: expected type `u64`
              found tuple `(u64, MigrationRecord)`
note: tuple variant defined here
   --> src\main.rs:33:5
    |
33  |     MoveTaskComplete(usize, u64), // Index of task completed, left behind bytes
    |     ^^^^^^^^^^^^^^^^

error[E0599]: no method named `start_restore` found for mutable reference `&mut App` in the current scope
    --> src\main.rs:1039:22
     |
1039 |                 self.start_restore(record, ctx);
     |                      ^^^^^^^^^^^^^ method not found in `&mut App`

error[E0382]: borrow of moved value: `ctx_clone`
    --> src\main.rs:1073:13
     |
1060 |             let progress_cb = move |bytes_delta| {
     |                               ------------------ value moved into closure here
1061 |                 let _ = tx_clone.send(AppEvent::RestoreProgressBytes(bytes_delta));
1062 |                 ctx_clone.request_repaint();
     |                 --------- variable moved due to use in closure
...
1073 |             ctx_clone.request_repaint();
     |             ^^^^^^^^^ value borrowed here after move
     |
     = note: move occurs because `ctx_clone` has type `eframe::egui::Context`, which does not implement the `Copy` trait

Some errors have detailed explanations: E0308, E0382, E0407, E0425, E0433, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `cpan_mover` (bin "cpan_mover") generated 1 warning
error: could not compile `cpan_mover` (bin "cpan_mover") due to 10 previous errors; 1 warning emitted
